@@ -26,7 +26,8 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
-import java.net.URLEncoder;
+import java.lang.reflect.InvocationTargetException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -43,11 +44,6 @@ import java.util.stream.Collectors;
 
 import com.cloud.storage.Storage;
 import com.cloud.utils.exception.CloudRuntimeException;
-import com.vmware.vim25.InvalidStateFaultMsg;
-import com.vmware.vim25.RuntimeFaultFaultMsg;
-import com.vmware.vim25.TaskInfo;
-import com.vmware.vim25.TaskInfoState;
-import com.vmware.vim25.VirtualMachineTicket;
 import org.apache.cloudstack.storage.DiskControllerMappingVO;
 import org.apache.cloudstack.utils.reflectiontostringbuilderutils.ReflectionToStringBuilderUtils;
 import org.apache.commons.collections.CollectionUtils;
@@ -57,12 +53,13 @@ import com.cloud.hypervisor.vmware.mo.SnapshotDescriptor.SnapshotInfo;
 import com.cloud.hypervisor.vmware.util.VmwareContext;
 import com.cloud.hypervisor.vmware.util.VmwareHelper;
 import com.cloud.utils.ActionDelegate;
-import com.cloud.utils.LogUtils;
 import com.cloud.utils.Pair;
 import com.cloud.utils.Ternary;
 import com.cloud.utils.concurrency.NamedThreadFactory;
 import com.cloud.utils.script.Script;
+
 import com.google.gson.Gson;
+
 import com.vmware.vim25.ArrayOfManagedObjectReference;
 import com.vmware.vim25.ChoiceOption;
 import com.vmware.vim25.CustomFieldStringValue;
@@ -74,6 +71,8 @@ import com.vmware.vim25.GuestOsDescriptor;
 import com.vmware.vim25.HttpNfcLeaseDeviceUrl;
 import com.vmware.vim25.HttpNfcLeaseInfo;
 import com.vmware.vim25.HttpNfcLeaseState;
+import com.vmware.vim25.InvalidPropertyFaultMsg;
+import com.vmware.vim25.InvalidStateFaultMsg;
 import com.vmware.vim25.ManagedObjectReference;
 import com.vmware.vim25.ObjectContent;
 import com.vmware.vim25.ObjectSpec;
@@ -83,11 +82,13 @@ import com.vmware.vim25.OvfCreateDescriptorResult;
 import com.vmware.vim25.OvfFile;
 import com.vmware.vim25.PropertyFilterSpec;
 import com.vmware.vim25.PropertySpec;
+import com.vmware.vim25.RuntimeFaultFaultMsg;
+import com.vmware.vim25.TaskInfo;
+import com.vmware.vim25.TaskInfoState;
 import com.vmware.vim25.TraversalSpec;
 import com.vmware.vim25.VirtualCdrom;
 import com.vmware.vim25.VirtualCdromIsoBackingInfo;
 import com.vmware.vim25.VirtualCdromRemotePassthroughBackingInfo;
-import com.vmware.vim25.VirtualController;
 import com.vmware.vim25.VirtualDevice;
 import com.vmware.vim25.VirtualDeviceBackingInfo;
 import com.vmware.vim25.VirtualDeviceConfigSpec;
@@ -125,6 +126,7 @@ import com.vmware.vim25.VirtualMachineRelocateSpecDiskLocator;
 import com.vmware.vim25.VirtualMachineRuntimeInfo;
 import com.vmware.vim25.VirtualMachineSnapshotInfo;
 import com.vmware.vim25.VirtualMachineSnapshotTree;
+import com.vmware.vim25.VirtualMachineTicket;
 import com.vmware.vim25.VirtualSCSIController;
 import com.vmware.vim25.VirtualSCSISharing;
 
@@ -162,54 +164,17 @@ public class VirtualMachineMO extends BaseMO {
         return DatacenterMO.getOwnerDatacenter(getContext(), getMor());
     }
 
-    public Pair<DatastoreMO, String> getOwnerDatastore(String dsFullPath) throws Exception {
-        String dsName = DatastoreFile.getDatastoreNameFromPath(dsFullPath);
-
-        PropertySpec pSpec = new PropertySpec();
-        pSpec.setType("Datastore");
-        pSpec.getPathSet().add("name");
-
-        TraversalSpec vmDatastoreTraversal = new TraversalSpec();
-        vmDatastoreTraversal.setType("VirtualMachine");
-        vmDatastoreTraversal.setPath("datastore");
-        vmDatastoreTraversal.setName("vmDatastoreTraversal");
-
-        ObjectSpec oSpec = new ObjectSpec();
-        oSpec.setObj(_mor);
-        oSpec.setSkip(Boolean.TRUE);
-        oSpec.getSelectSet().add(vmDatastoreTraversal);
-
-        PropertyFilterSpec pfSpec = new PropertyFilterSpec();
-        pfSpec.getPropSet().add(pSpec);
-        pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
-        pfSpecArr.add(pfSpec);
-
-        List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
-
-        if (ocs != null) {
-            for (ObjectContent oc : ocs) {
-                DynamicProperty prop = oc.getPropSet().get(0);
-                if (prop.getVal().toString().equals(dsName)) {
-                    return new Pair<DatastoreMO, String>(new DatastoreMO(_context, oc.getObj()), dsName);
-                }
-            }
-        }
-
-        return null;
-    }
-
     public HostMO getRunningHost() throws Exception {
         VirtualMachineRuntimeInfo runtimeInfo = getRuntimeInfo();
         return new HostMO(_context, runtimeInfo.getHost());
     }
 
-    public String getVmName() throws Exception {
-        return (String)getContext().getVimClient().getDynamicProperty(_mor, "name");
+    public String getVmName() throws InvalidPropertyFaultMsg, RuntimeFaultFaultMsg, InvocationTargetException, NoSuchMethodException, IllegalAccessException {
+        return getContext().getVimClient().getDynamicProperty(_mor, "name");
     }
 
     public GuestInfo getVmGuestInfo() throws Exception {
-        return (GuestInfo)getContext().getVimClient().getDynamicProperty(_mor, "guest");
+        return getContext().getVimClient().getDynamicProperty(_mor, "guest");
     }
 
     public void answerVM(String questionId, String choice) throws Exception {
@@ -218,11 +183,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public boolean isVMwareToolsRunning() throws Exception {
         GuestInfo guestInfo = getVmGuestInfo();
-        if (guestInfo != null) {
-            if ("guestToolsRunning".equalsIgnoreCase(guestInfo.getToolsRunningStatus()))
-                return true;
-        }
-        return false;
+        return guestInfo != null && "guestToolsRunning".equalsIgnoreCase(guestInfo.getToolsRunningStatus());
     }
 
     public boolean powerOn() throws Exception {
@@ -391,7 +352,7 @@ public class VirtualMachineMO extends BaseMO {
         // In the future, VMsync should not kick off CloudStack action (this is not a HA case) based on VM
         // state report, until then we can remove this hacking fix
         for (int i = 0; i < 3; i++) {
-            powerState = (VirtualMachinePowerState)getContext().getVimClient().getDynamicProperty(_mor, "runtime.powerState");
+            powerState = getContext().getVimClient().getDynamicProperty(_mor, "runtime.powerState");
             if (powerState == VirtualMachinePowerState.POWERED_OFF) {
                 try {
                     Thread.sleep(1000);
@@ -407,7 +368,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualMachinePowerState getPowerState() throws Exception {
-        return (VirtualMachinePowerState)getContext().getVimClient().getDynamicProperty(_mor, "runtime.powerState");
+        return getContext().getVimClient().getDynamicProperty(_mor, "runtime.powerState");
     }
 
     public boolean reset() throws Exception {
@@ -470,39 +431,6 @@ public class VirtualMachineMO extends BaseMO {
         return false;
     }
 
-    public boolean changeHost(VirtualMachineRelocateSpec relocateSpec) throws Exception {
-        ManagedObjectReference morTask = _context.getService().relocateVMTask(_mor, relocateSpec, VirtualMachineMovePriority.DEFAULT_PRIORITY);
-        boolean result = _context.getVimClient().waitForTask(morTask);
-        if (result) {
-            _context.waitForTaskProgressDone(morTask);
-            return true;
-        } else {
-            logger.error("VMware RelocateVM_Task to change host failed due to " + TaskMO.getTaskFailureInfo(_context, morTask));
-        }
-        return false;
-    }
-
-    public boolean changeDatastore(ManagedObjectReference morDataStore, VmwareHypervisorHost targetHost) throws Exception {
-        VirtualMachineRelocateSpec relocateSpec = new VirtualMachineRelocateSpec();
-        relocateSpec.setDatastore(morDataStore);
-        if (targetHost != null) {
-            relocateSpec.setHost(targetHost.getMor());
-            relocateSpec.setPool(targetHost.getHyperHostOwnerResourcePool());
-        }
-
-        ManagedObjectReference morTask = _context.getService().relocateVMTask(_mor, relocateSpec, null);
-
-        boolean result = _context.getVimClient().waitForTask(morTask);
-        if (result) {
-            _context.waitForTaskProgressDone(morTask);
-            return true;
-        } else {
-            logger.error("VMware change datastore relocateVM_Task failed due to " + TaskMO.getTaskFailureInfo(_context, morTask));
-        }
-
-        return false;
-    }
-
     public boolean relocate(ManagedObjectReference morTargetHost) throws Exception {
         VirtualMachineRelocateSpec relocateSpec = new VirtualMachineRelocateSpec();
         relocateSpec.setHost(morTargetHost);
@@ -521,7 +449,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualMachineSnapshotInfo getSnapshotInfo() throws Exception {
-        return (VirtualMachineSnapshotInfo)_context.getVimClient().getDynamicProperty(_mor, "snapshot");
+        return _context.getVimClient().getDynamicProperty(_mor, "snapshot");
     }
 
     public boolean createSnapshot(String snapshotName, String snapshotDescription, boolean dumpMemory, boolean quiesce) throws Exception {
@@ -589,39 +517,6 @@ public class VirtualMachineMO extends BaseMO {
         }
 
         return false;
-    }
-
-    public boolean revertToSnapshot(String snapshotName) throws Exception {
-        ManagedObjectReference morSnapshot = getSnapshotMor(snapshotName);
-        if (morSnapshot == null) {
-            logger.warn("Unable to find snapshot: " + snapshotName);
-            return false;
-        }
-        ManagedObjectReference morTask = _context.getService().revertToSnapshotTask(morSnapshot, _mor, null);
-        boolean result = _context.getVimClient().waitForTask(morTask);
-        if (result) {
-            _context.waitForTaskProgressDone(morTask);
-            return true;
-        } else {
-            logger.error("VMware revert to snapshot failed due to " + TaskMO.getTaskFailureInfo(_context, morTask));
-        }
-
-        return false;
-    }
-
-    /**
-     * Deletes all of the snapshots of a VM.
-     */
-    public void consolidateAllSnapshots() throws Exception {
-        ManagedObjectReference task = _context.getService().removeAllSnapshotsTask(_mor, true);
-
-        boolean result = _context.getVimClient().waitForTask(task);
-
-        if (result) {
-            _context.waitForTaskProgressDone(task);
-        } else {
-            throw new Exception("Unable to register VM due to the following issue: " + TaskMO.getTaskFailureInfo(_context, task));
-        }
     }
 
     public boolean removeAllSnapshots() throws Exception {
@@ -703,7 +598,7 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
@@ -752,9 +647,7 @@ public class VirtualMachineMO extends BaseMO {
                 return true;
             }
             List<VirtualMachineSnapshotTree> rootSnapshotList = info.getRootSnapshotList();
-            if (rootSnapshotList != null && rootSnapshotList.size() > 0) {
-                return true;
-            }
+            return CollectionUtils.isNotEmpty(rootSnapshotList);
         }
         return false;
     }
@@ -907,11 +800,11 @@ public class VirtualMachineMO extends BaseMO {
         VirtualDisk[] independentDisks = getAllIndependentDiskDevice();
         VirtualMachineRelocateSpec rSpec = new VirtualMachineRelocateSpec();
         if (independentDisks.length > 0) {
-            List<VirtualMachineRelocateSpecDiskLocator> diskLocator = new ArrayList<VirtualMachineRelocateSpecDiskLocator>(independentDisks.length);
-            for (int i = 0; i < independentDisks.length; i++) {
+            List<VirtualMachineRelocateSpecDiskLocator> diskLocator = new ArrayList<>(independentDisks.length);
+            for (VirtualDisk independentDisk : independentDisks) {
                 VirtualMachineRelocateSpecDiskLocator loc = new VirtualMachineRelocateSpecDiskLocator();
                 loc.setDatastore(morDs);
-                loc.setDiskId(independentDisks[i].getKey());
+                loc.setDiskId(independentDisk.getKey());
                 loc.setDiskMoveType(VirtualMachineRelocateDiskMoveOptions.MOVE_ALL_DISK_BACKINGS_AND_DISALLOW_SHARING.value());
                 diskLocator.add(loc);
             }
@@ -943,26 +836,26 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualMachineRuntimeInfo getRuntimeInfo() throws Exception {
-        return (VirtualMachineRuntimeInfo)_context.getVimClient().getDynamicProperty(_mor, "runtime");
+        return _context.getVimClient().getDynamicProperty(_mor, "runtime");
     }
 
     public VirtualMachineConfigInfo getConfigInfo() throws Exception {
-        return (VirtualMachineConfigInfo)_context.getVimClient().getDynamicProperty(_mor, "config");
+        return _context.getVimClient().getDynamicProperty(_mor, "config");
     }
 
     public boolean isToolsInstallerMounted() throws Exception {
         return _context.getVimClient().getDynamicProperty(_mor, "runtime.toolsInstallerMounted");
     }
     public GuestInfo getGuestInfo() throws Exception {
-        return (GuestInfo)_context.getVimClient().getDynamicProperty(_mor, "guest");
+        return _context.getVimClient().getDynamicProperty(_mor, "guest");
     }
 
     public VirtualMachineConfigSummary getConfigSummary() throws Exception {
-        return (VirtualMachineConfigSummary)_context.getVimClient().getDynamicProperty(_mor, "summary.config");
+        return _context.getVimClient().getDynamicProperty(_mor, "summary.config");
     }
 
     public VirtualMachineFileInfo getFileInfo() throws Exception {
-        return (VirtualMachineFileInfo)_context.getVimClient().getDynamicProperty(_mor, "config.files");
+        return _context.getVimClient().getDynamicProperty(_mor, "config.files");
     }
 
     public VirtualMachineFileLayoutEx getFileLayout() throws Exception {
@@ -978,7 +871,7 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
@@ -1000,9 +893,30 @@ public class VirtualMachineMO extends BaseMO {
         return fileLayout;
     }
 
+    public String getPath() throws Exception {
+        List<String> subPaths = new ArrayList<>();
+        ManagedObjectReference mor = _context.getVimClient().getDynamicProperty(_mor, "parent");
+        while (mor != null && mor.getType().equalsIgnoreCase("Folder")) {
+            String subPath = _context.getVimClient().getDynamicProperty(mor, "name");
+            if (StringUtils.isBlank(subPath)) {
+                return null;
+            }
+            subPaths.add(subPath);
+            mor = _context.getVimClient().getDynamicProperty(mor, "parent");
+        }
+
+        if (!subPaths.isEmpty()) {
+            Collections.reverse(subPaths);
+            String path = StringUtils.join(subPaths, "/");
+            return path;
+        }
+
+        return null;
+    }
+
     @Override
     public ManagedObjectReference getParentMor() throws Exception {
-        return (ManagedObjectReference)_context.getVimClient().getDynamicProperty(_mor, "parent");
+        return _context.getVimClient().getDynamicProperty(_mor, "parent");
     }
 
     public String[] getNetworks() throws Exception {
@@ -1023,13 +937,13 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
 
-        List<String> networks = new ArrayList<String>();
-        if (ocs != null && ocs.size() > 0) {
+        List<String> networks = new ArrayList<>();
+        if (CollectionUtils.isNotEmpty(ocs)) {
             for (ObjectContent oc : ocs) {
                 networks.add(oc.getPropSet().get(0).getVal().toString());
             }
@@ -1038,7 +952,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public List<NetworkDetails> getNetworksWithDetails() throws Exception {
-        List<NetworkDetails> networks = new ArrayList<NetworkDetails>();
+        List<NetworkDetails> networks = new ArrayList<>();
 
         int gcTagKey = getCustomFieldKey("Network", CustomFieldConstants.CLOUD_GC);
 
@@ -1066,12 +980,12 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
 
-        if (ocs != null && ocs.size() > 0) {
+        if (CollectionUtils.isNotEmpty(ocs)) {
             for (ObjectContent oc : ocs) {
                 ArrayOfManagedObjectReference morVms = null;
                 String gcTagValue = null;
@@ -1119,73 +1033,18 @@ public class VirtualMachineMO extends BaseMO {
         PropertyFilterSpec pfSpec = new PropertyFilterSpec();
         pfSpec.getPropSet().add(pSpec);
         pfSpec.getObjectSet().add(oSpec);
-        List<PropertyFilterSpec> pfSpecArr = new ArrayList<PropertyFilterSpec>();
+        List<PropertyFilterSpec> pfSpecArr = new ArrayList<>();
         pfSpecArr.add(pfSpec);
 
         List<ObjectContent> ocs = _context.getService().retrieveProperties(_context.getPropertyCollector(), pfSpecArr);
 
-        List<DatastoreMO> datastores = new ArrayList<DatastoreMO>();
+        List<DatastoreMO> datastores = new ArrayList<>();
         if (CollectionUtils.isNotEmpty(ocs)) {
             for (ObjectContent oc : ocs) {
                 datastores.add(new DatastoreMO(_context, oc.getObj()));
             }
         }
         return datastores;
-    }
-
-    /**
-     * Retrieve path info to access VM files via vSphere web interface
-     * @return [0] vm-name, [1] data-center-name, [2] datastore-name
-     * @throws Exception
-     */
-    public String[] getHttpAccessPathInfo() throws Exception {
-        String[] pathInfo = new String[3];
-
-        Pair<DatacenterMO, String> dcInfo = getOwnerDatacenter();
-
-        VirtualMachineFileInfo fileInfo = getFileInfo();
-        String vmxFilePath = fileInfo.getVmPathName();
-        String vmxPathTokens[] = vmxFilePath.split("\\[|\\]|/");
-        assert (vmxPathTokens.length == 4);
-        pathInfo[1] = vmxPathTokens[1].trim();                            // vSphere vm name
-        pathInfo[2] = dcInfo.second();                                    // vSphere datacenter name
-        pathInfo[3] = vmxPathTokens[0].trim();                            // vSphere datastore name
-        return pathInfo;
-    }
-
-    public String getVmxHttpAccessUrl() throws Exception {
-        Pair<DatacenterMO, String> dcInfo = getOwnerDatacenter();
-
-        VirtualMachineFileInfo fileInfo = getFileInfo();
-        String vmxFilePath = fileInfo.getVmPathName();
-        String vmxPathTokens[] = vmxFilePath.split("\\[|\\]|/");
-
-        StringBuffer sb = new StringBuffer("https://" + _context.getServerAddress() + "/folder/");
-        sb.append(URLEncoder.encode(vmxPathTokens[2].trim(), "UTF-8"));
-        sb.append("/");
-        sb.append(URLEncoder.encode(vmxPathTokens[3].trim(), "UTF-8"));
-        sb.append("?dcPath=");
-        sb.append(URLEncoder.encode(dcInfo.second(), "UTF-8"));
-        sb.append("&dsName=");
-        sb.append(URLEncoder.encode(vmxPathTokens[1].trim(), "UTF-8"));
-
-        return sb.toString();
-    }
-
-    public boolean setVncConfigInfo(boolean enableVnc, String vncPassword, int vncPort, String keyboard) throws Exception {
-        VirtualMachineConfigSpec vmConfigSpec = new VirtualMachineConfigSpec();
-        OptionValue[] vncOptions = VmwareHelper.composeVncOptions(null, enableVnc, vncPassword, vncPort, keyboard);
-        vmConfigSpec.getExtraConfig().addAll(Arrays.asList(vncOptions));
-        ManagedObjectReference morTask = _context.getService().reconfigVMTask(_mor, vmConfigSpec);
-
-        boolean result = _context.getVimClient().waitForTask(morTask);
-        if (result) {
-            _context.waitForTaskProgressDone(morTask);
-            return true;
-        } else {
-            logger.error("VMware reconfigVM_Task failed due to " + TaskMO.getTaskFailureInfo(_context, morTask));
-        }
-        return false;
     }
 
     public boolean configureVm(VirtualMachineConfigSpec vmConfigSpec) throws Exception {
@@ -1242,12 +1101,12 @@ public class VirtualMachineMO extends BaseMO {
                 if (option.getKey().equals("RemoteDisplay.vnc.port")) {
                     String value = (String)option.getValue();
                     if (value != null) {
-                        return new Pair<String, Integer>(summary.getHostIp(), Integer.parseInt(value));
+                        return new Pair<>(summary.getHostIp(), Integer.parseInt(value));
                     }
                 }
             }
         }
-        return new Pair<String, Integer>(summary.getHostIp(), 0);
+        return new Pair<>(summary.getHostIp(), 0);
     }
 
     // vmdkDatastorePath: [datastore name] vmdkFilePath
@@ -1258,11 +1117,10 @@ public class VirtualMachineMO extends BaseMO {
     // vmdkDatastorePath: [datastore name] vmdkFilePath
     public void createDisk(String vmdkDatastorePath, VirtualDiskType diskType, VirtualDiskMode diskMode, String rdmDeviceName, long sizeInMb,
                            ManagedObjectReference morDs, int controllerKey, String vSphereStoragePolicyId) throws Exception {
-        logger.trace(String.format("Creating disk in target MOR [%s] with values: vmdkDatastorePath [%s], sizeInMb [%s], diskType [%s], diskMode [%s], rdmDeviceName [%s]"
-                    + ", datastore [%s], controllerKey [%s].", _mor.getValue(), vmdkDatastorePath, sizeInMb, diskType, diskMode, rdmDeviceName, morDs.getValue(), controllerKey));
+        logger.trace("Creating disk in target MOR [{}] with values: vmdkDatastorePath [{}], sizeInMb [{}], diskType [{}], diskMode [{}], rdmDeviceName [{}], datastore [{}], controllerKey [{}].",
+                _mor.getValue(), vmdkDatastorePath, sizeInMb, diskType, diskMode, rdmDeviceName, morDs.getValue(), controllerKey);
 
         assert (vmdkDatastorePath != null);
-        assert (morDs != null);
 
         int ideControllerKey = getIDEDeviceControllerKey();
         if (controllerKey < 0) {
@@ -1274,17 +1132,9 @@ public class VirtualMachineMO extends BaseMO {
 
             VirtualDiskFlatVer2BackingInfo backingInfo = new VirtualDiskFlatVer2BackingInfo();
             backingInfo.setDiskMode(VirtualDiskMode.PERSISTENT.value());
-            if (diskType == VirtualDiskType.THIN) {
-                backingInfo.setThinProvisioned(true);
-            } else {
-                backingInfo.setThinProvisioned(false);
-            }
+            backingInfo.setThinProvisioned(diskType == VirtualDiskType.THIN);
 
-            if (diskType == VirtualDiskType.EAGER_ZEROED_THICK) {
-                backingInfo.setEagerlyScrub(true);
-            } else {
-                backingInfo.setEagerlyScrub(false);
-            }
+            backingInfo.setEagerlyScrub(diskType == VirtualDiskType.EAGER_ZEROED_THICK);
 
             backingInfo.setDatastore(morDs);
             backingInfo.setFileName(vmdkDatastorePath);
@@ -1359,7 +1209,7 @@ public class VirtualMachineMO extends BaseMO {
             if (!currentAdapterType.equalsIgnoreCase(newAdapterType)) {
                 logger.info("Updating adapter type to " + newAdapterType + " for VMDK file " + vmdkFileName);
                 Pair<DatacenterMO, String> dcInfo = getOwnerDatacenter();
-                byte[] newVmdkContent = vmdkFileDescriptor.changeVmdkAdapterType(vmdkInfo.second(), newAdapterType);
+                byte[] newVmdkContent = VmdkFileDescriptor.changeVmdkAdapterType(vmdkInfo.second(), newAdapterType);
                 String vmdkUploadUrl = getContext().composeDatastoreBrowseUrl(dcInfo.first().getName(), vmdkFileName);
                 getContext().uploadResourceContent(vmdkUploadUrl, newVmdkContent);
                 logger.info("Updated VMDK file " + vmdkFileName);
@@ -1386,7 +1236,7 @@ public class VirtualMachineMO extends BaseMO {
                 VmdkAdapterType newAdapterType = VmdkAdapterType.lsilogic;
                 logger.debug("Updating adapter type to " + newAdapterType + " from " + currentAdapterTypeStr + " for VMDK file " + vmdkFileName);
                 Pair<DatacenterMO, String> dcInfo = getOwnerDatacenter();
-                byte[] newVmdkContent = vmdkFileDescriptor.changeVmdkAdapterType(vmdkInfo.second(), newAdapterType.toString());
+                byte[] newVmdkContent = VmdkFileDescriptor.changeVmdkAdapterType(vmdkInfo.second(), newAdapterType.toString());
                 String vmdkUploadUrl = getContext().composeDatastoreBrowseUrl(dcInfo.first().getName(), vmdkFileName);
 
                 getContext().uploadResourceContent(vmdkUploadUrl, newVmdkContent);
@@ -1567,7 +1417,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     private Future<?> answerVmwareQuestion(Boolean[] flags, VirtualMachineMO vmMo, boolean force) {
-        Future<?> future = MonitorServiceExecutor.submit(new Runnable() {
+        return MonitorServiceExecutor.submit(new Runnable() {
             @Override
             public void run() {
                 logger.info("VM Question monitor started...");
@@ -1632,7 +1482,6 @@ public class VirtualMachineMO extends BaseMO {
                 logger.info("VM Question monitor stopped");
             }
         });
-        return future;
     }
     // isoDatastorePath: [datastore name] isoFilePath
     public void attachIso(String isoDatastorePath, ManagedObjectReference morDs, boolean connect, boolean connectAtBoot, boolean forced) throws Exception {
@@ -1773,10 +1622,10 @@ public class VirtualMachineMO extends BaseMO {
         VmdkFileDescriptor descriptor = new VmdkFileDescriptor();
         descriptor.parse(content);
 
-        Pair<VmdkFileDescriptor, byte[]> result = new Pair<VmdkFileDescriptor, byte[]>(descriptor, content);
+        Pair<VmdkFileDescriptor, byte[]> result = new Pair<>(descriptor, content);
+        logger.trace("vCenter API trace - getVmdkFileInfo() done");
         if (logger.isTraceEnabled()) {
-            logger.trace("vCenter API trace - getVmdkFileInfo() done");
-            logger.trace("VMDK file descriptor: " + GSON.toJson(result.first()));
+            logger.trace("VMDK file descriptor: {}", GSON.toJson(result.first()));
         }
         return result;
     }
@@ -1852,7 +1701,7 @@ public class VirtualMachineMO extends BaseMO {
                                 if (logger.isInfoEnabled()) {
                                     logger.info("Download VMDK file for export url: " + deviceUrlStr + ", size: " + diskFileSize);
                                 }
-                                long lengthOfDiskFile = _context.downloadVmdkFile(diskUrlStr, diskLocalPath, totalBytesDownloaded, new ActionDelegate<Long>() {
+                                long lengthOfDiskFile = _context.downloadVmdkFile(diskUrlStr, diskLocalPath, totalBytesDownloaded, new ActionDelegate<>() {
                                     @Override
                                     public void action(Long param) {
                                         if (logger.isTraceEnabled()) {
@@ -1877,7 +1726,7 @@ public class VirtualMachineMO extends BaseMO {
                                 CompletableFuture<Long> future = CompletableFuture.supplyAsync(() -> {
                                     long lengthOfDiskFile = 0;
                                     try {
-                                        lengthOfDiskFile = _context.downloadVmdkFile(diskUrl, diskLocalPath, totalBytesDownloaded, new ActionDelegate<Long>() {
+                                        lengthOfDiskFile = _context.downloadVmdkFile(diskUrl, diskLocalPath, totalBytesDownloaded, new ActionDelegate<>() {
                                             @Override
                                             public void action(Long param) {
                                                 if (logger.isTraceEnabled()) {
@@ -1928,7 +1777,7 @@ public class VirtualMachineMO extends BaseMO {
                         String ovfPath = exportDir + File.separator + exportName + ".ovf";
                         fileNames.add(ovfPath);
 
-                        OutputStreamWriter out = new OutputStreamWriter(new FileOutputStream(ovfPath),"UTF-8");
+                        OutputStreamWriter out = new OutputStreamWriter(new FileOutputStream(ovfPath), StandardCharsets.UTF_8);
                         out.write(ovfCreateDescriptorResult.getOvfDescriptor());
                         out.close();
 
@@ -1950,7 +1799,7 @@ public class VirtualMachineMO extends BaseMO {
                                 }
                             }
 
-                            logger.info("Package OVA with command: " + command.toString());
+                            logger.info("Package OVA with command: {}", command.toString());
                             command.execute();
 
                             // to be safe, physically test existence of the target OVA file
@@ -1999,8 +1848,8 @@ public class VirtualMachineMO extends BaseMO {
 
         boolean replaced = false;
         try {
-            in = new BufferedReader(new InputStreamReader(new ByteArrayInputStream(vmxContent),"UTF-8"));
-            out = new BufferedWriter(new OutputStreamWriter(bos,"UTF-8"));
+            in = new BufferedReader(new InputStreamReader(new ByteArrayInputStream(vmxContent), StandardCharsets.UTF_8));
+            out = new BufferedWriter(new OutputStreamWriter(bos, StandardCharsets.UTF_8));
             String line;
             while ((line = in.readLine()) != null) {
                 if (line.startsWith("workingDir")) {
@@ -2033,70 +1882,6 @@ public class VirtualMachineMO extends BaseMO {
         // redoRegistration();
     }
 
-    // destName does not contain extension name
-    public void backupCurrentSnapshot(String deviceName, ManagedObjectReference morDestDs, String destDsDirectory, String destName, boolean includeBase) throws Exception {
-
-        SnapshotDescriptor descriptor = getSnapshotDescriptor();
-        SnapshotInfo[] snapshotInfo = descriptor.getCurrentDiskChain();
-        if (snapshotInfo.length == 0) {
-            String msg = "No snapshot found in this VM";
-            throw new Exception(msg);
-        }
-
-        HostMO hostMo = getRunningHost();
-        DatacenterMO dcMo = getOwnerDatacenter().first();
-        List<Pair<ManagedObjectReference, String>> mounts = hostMo.getDatastoreMountsOnHost();
-        VirtualMachineFileInfo vmFileInfo = getFileInfo();
-
-        List<Ternary<String, String, String>> backupInfo = new ArrayList<Ternary<String, String, String>>();
-
-        for (int i = 0; i < snapshotInfo.length; i++) {
-            if (!includeBase && i == snapshotInfo.length - 1) {
-                break;
-            }
-
-            SnapshotDescriptor.DiskInfo[] disks = snapshotInfo[i].getDisks();
-            if (disks != null) {
-                String destBaseFileName;
-                String destFileName;
-                String destParentFileName;
-                for (SnapshotDescriptor.DiskInfo disk : disks) {
-                    if (deviceName == null || deviceName.equals(disk.getDeviceName())) {
-                        String srcVmdkFullDsPath = getSnapshotDiskFileDatastorePath(vmFileInfo, mounts, disk.getDiskFileName());
-                        Pair<DatastoreMO, String> srcDsInfo = getOwnerDatastore(srcVmdkFullDsPath);
-
-                        Pair<VmdkFileDescriptor, byte[]> vmdkInfo = getVmdkFileInfo(srcVmdkFullDsPath);
-                        String srcVmdkBaseFilePath = DatastoreFile.getCompanionDatastorePath(srcVmdkFullDsPath, vmdkInfo.first().getBaseFileName());
-
-                        destFileName = destName + (snapshotInfo.length - i - 1) + ".vmdk";
-                        if (vmdkInfo.first().getParentFileName() != null) {
-                            destBaseFileName = destName + (snapshotInfo.length - i - 1) + "-delta.vmdk";
-                            destParentFileName = destName + (snapshotInfo.length - i - 2) + ".vmdk";
-                        } else {
-                            destBaseFileName = destName + (snapshotInfo.length - i - 1) + "-flat.vmdk";
-                            destParentFileName = null;
-                        }
-
-                        logger.info("Copy VMDK base file " + srcVmdkBaseFilePath + " to " + destDsDirectory + "/" + destBaseFileName);
-                        srcDsInfo.first().copyDatastoreFile(srcVmdkBaseFilePath, dcMo.getMor(), morDestDs, destDsDirectory + "/" + destBaseFileName, dcMo.getMor(), true);
-
-                        byte[] newVmdkContent = VmdkFileDescriptor.changeVmdkContentBaseInfo(vmdkInfo.second(), destBaseFileName, destParentFileName);
-                        String vmdkUploadUrl = getContext().composeDatastoreBrowseUrl(dcMo.getName(), destDsDirectory + "/" + destFileName);
-
-                        logger.info("Upload VMDK content file to " + destDsDirectory + "/" + destFileName);
-                        getContext().uploadResourceContent(vmdkUploadUrl, newVmdkContent);
-
-                        backupInfo.add(new Ternary<String, String, String>(destFileName, destBaseFileName, destParentFileName));
-                    }
-                }
-            }
-        }
-
-        byte[] vdiskInfo = VmwareHelper.composeDiskInfo(backupInfo, snapshotInfo.length, includeBase);
-        String vdiskUploadUrl = getContext().composeDatastoreBrowseUrl(dcMo.getName(), destDsDirectory + "/" + destName + ".vdisk");
-        getContext().uploadResourceContent(vdiskUploadUrl, vdiskInfo);
-    }
-
     public String[] getCurrentSnapshotDiskChainDatastorePaths(String diskDevice) throws Exception {
         HostMO hostMo = getRunningHost();
         List<Pair<ManagedObjectReference, String>> mounts = hostMo.getDatastoreMountsOnHost();
@@ -2105,9 +1890,9 @@ public class VirtualMachineMO extends BaseMO {
         SnapshotDescriptor descriptor = getSnapshotDescriptor();
         SnapshotInfo[] snapshotInfo = descriptor.getCurrentDiskChain();
 
-        List<String> diskDsFullPaths = new ArrayList<String>();
-        for (int i = 0; i < snapshotInfo.length; i++) {
-            SnapshotDescriptor.DiskInfo[] disks = snapshotInfo[i].getDisks();
+        List<String> diskDsFullPaths = new ArrayList<>();
+        for (SnapshotInfo info : snapshotInfo) {
+            SnapshotDescriptor.DiskInfo[] disks = info.getDisks();
             if (disks != null) {
                 for (SnapshotDescriptor.DiskInfo disk : disks) {
                     String deviceNameInDisk = disk.getDeviceName();
@@ -2127,7 +1912,7 @@ public class VirtualMachineMO extends BaseMO {
         assert (morDs != null);
         String[] disks = getCurrentSnapshotDiskChainDatastorePaths(diskDevice);
         VirtualMachineMO clonedVm = cloneFromDiskChain(clonedVmName, cpuSpeedMHz, memoryMb, disks, morDs, virtualHardwareVersion);
-        return new Pair<VirtualMachineMO, String[]>(clonedVm, disks);
+        return new Pair<>(clonedVm, disks);
     }
 
     public VirtualMachineMO cloneFromDiskChain(String clonedVmName, int cpuSpeedMHz, int memoryMb, String[] disks, ManagedObjectReference morDs, String cloneHardwareVersion) throws Exception {
@@ -2178,19 +1963,6 @@ public class VirtualMachineMO extends BaseMO {
         return guestOsDescriptor;
     }
 
-    public void plugDevice(VirtualDevice device) throws Exception {
-        logger.debug(LogUtils.logGsonWithoutException("Pluging device [%s] to VM [%s].", device, getVmName()));
-        VirtualMachineConfigSpec vmConfigSpec = new VirtualMachineConfigSpec();
-        VirtualDeviceConfigSpec deviceConfigSpec = new VirtualDeviceConfigSpec();
-        deviceConfigSpec.setDevice(device);
-        deviceConfigSpec.setOperation(VirtualDeviceConfigSpecOperation.ADD);
-
-        vmConfigSpec.getDeviceChange().add(deviceConfigSpec);
-        if (!configureVm(vmConfigSpec)) {
-            throw new Exception("Failed to add devices");
-        }
-    }
-
     public void tearDownDevice(VirtualDevice device) throws Exception {
         VirtualMachineConfigSpec vmConfigSpec = new VirtualMachineConfigSpec();
         VirtualDeviceConfigSpec deviceConfigSpec = new VirtualDeviceConfigSpec();
@@ -2223,40 +1995,8 @@ public class VirtualMachineMO extends BaseMO {
         }
     }
 
-    public void copyAllVmDiskFiles(DatastoreMO destDsMo, String destDsDir, boolean followDiskChain) throws Exception {
-        VirtualDevice[] disks = getAllDiskDevice();
-        DatacenterMO dcMo = getOwnerDatacenter().first();
-        if (disks != null) {
-            for (VirtualDevice disk : disks) {
-                List<Pair<String, ManagedObjectReference>> vmdkFiles = getDiskDatastorePathChain((VirtualDisk)disk, followDiskChain);
-                for (Pair<String, ManagedObjectReference> fileItem : vmdkFiles) {
-                    DatastoreMO srcDsMo = new DatastoreMO(_context, fileItem.second());
-
-                    DatastoreFile srcFile = new DatastoreFile(fileItem.first());
-                    DatastoreFile destFile = new DatastoreFile(destDsMo.getName(), destDsDir, srcFile.getFileName());
-
-                    Pair<VmdkFileDescriptor, byte[]> vmdkDescriptor = null;
-
-                    vmdkDescriptor = getVmdkFileInfo(fileItem.first());
-
-                    logger.info("Copy VM disk file " + srcFile.getPath() + " to " + destFile.getPath());
-                    srcDsMo.copyDatastoreFile(fileItem.first(), dcMo.getMor(), destDsMo.getMor(), destFile.getPath(), dcMo.getMor(), true);
-
-                    if (vmdkDescriptor != null) {
-                        String vmdkBaseFileName = vmdkDescriptor.first().getBaseFileName();
-                        String baseFilePath = srcFile.getCompanionPath(vmdkBaseFileName);
-                        destFile = new DatastoreFile(destDsMo.getName(), destDsDir, vmdkBaseFileName);
-
-                        logger.info("Copy VM disk file " + baseFilePath + " to " + destFile.getPath());
-                        srcDsMo.copyDatastoreFile(baseFilePath, dcMo.getMor(), destDsMo.getMor(), destFile.getPath(), dcMo.getMor(), true);
-                    }
-                }
-            }
-        }
-    }
-
     public List<String> getVmdkFileBaseNames() throws Exception {
-        List<String> vmdkFileBaseNames = new ArrayList<String>();
+        List<String> vmdkFileBaseNames = new ArrayList<>();
         VirtualDevice[] devices = getAllDiskDevice();
         for(VirtualDevice device : devices) {
             if(device instanceof VirtualDisk) {
@@ -2291,7 +2031,7 @@ public class VirtualMachineMO extends BaseMO {
                     DatastoreFile srcFile = new DatastoreFile(fileItem.first());
                     DatastoreFile destFile = new DatastoreFile(destDsMo.getName(), destDsDir, srcFile.getFileName());
 
-                    Pair<VmdkFileDescriptor, byte[]> vmdkDescriptor = null;
+                    Pair<VmdkFileDescriptor, byte[]> vmdkDescriptor;
                     vmdkDescriptor = getVmdkFileInfo(fileItem.first());
 
                     logger.info("Move VM disk file " + srcFile.getPath() + " to " + destFile.getPath());
@@ -2320,7 +2060,7 @@ public class VirtualMachineMO extends BaseMO {
     public int getScsiDeviceControllerKey() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualSCSIController && isValidScsiDiskController((VirtualSCSIController)device)) {
                     return device.getKey();
@@ -2335,7 +2075,7 @@ public class VirtualMachineMO extends BaseMO {
     public int getScsiDeviceControllerKeyNoException() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualSCSIController && isValidScsiDiskController((VirtualSCSIController)device)) {
                     return device.getKey();
@@ -2377,11 +2117,7 @@ public class VirtualMachineMO extends BaseMO {
             return false;
         }
 
-        if (scsiDiskController.getBusNumber() >= VmwareHelper.MAX_SCSI_CONTROLLER_COUNT) {
-            return false;
-        }
-
-        return true;
+        return scsiDiskController.getBusNumber() < VmwareHelper.MAX_SCSI_CONTROLLER_COUNT;
     }
 
     // return pair of VirtualDisk and disk device bus name(ide0:0, etc)
@@ -2399,7 +2135,7 @@ public class VirtualMachineMO extends BaseMO {
 
         logger.info(String.format("Looking for disk device info for volume [%s] with base name [%s].", vmdkDatastorePath, srcBaseName));
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     logger.info(String.format("Testing if disk device with controller key [%s] and unit number [%s] has backing of type VirtualDiskFlatVer2BackingInfo.",
@@ -2483,12 +2219,12 @@ public class VirtualMachineMO extends BaseMO {
             logger.info("Look for disk device info from volume : " + vmdkDatastorePath + " with trimmed base name: " + trimmedSrcBaseName);
         }
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     logger.info("Test against disk device, controller key: " + device.getControllerKey() + ", unit number: " + device.getUnitNumber());
 
-                    VirtualDeviceBackingInfo backingInfo = ((VirtualDisk)device).getBacking();
+                    VirtualDeviceBackingInfo backingInfo = device.getBacking();
                     if (backingInfo instanceof VirtualDiskFlatVer2BackingInfo) {
                         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
                         do {
@@ -2501,14 +2237,14 @@ public class VirtualMachineMO extends BaseMO {
                                     String deviceNumbering = getDeviceBusName(devices, device);
                                     logger.info("Disk backing : " + diskBackingInfo.getFileName() + " matches ==> " + deviceNumbering);
 
-                                    return new Pair<VirtualDisk, String>((VirtualDisk)device, deviceNumbering);
+                                    return new Pair<>((VirtualDisk)device, deviceNumbering);
                                 }
                             } else {
                                 if (backingBaseName.contains(trimmedSrcBaseName)) {
                                     String deviceNumbering = getDeviceBusName(devices, device);
                                     logger.info("Disk backing : " + diskBackingInfo.getFileName() + " matches ==> " + deviceNumbering);
 
-                                    return new Pair<VirtualDisk, String>((VirtualDisk)device, deviceNumbering);
+                                    return new Pair<>((VirtualDisk)device, deviceNumbering);
                                 }
                             }
 
@@ -2524,12 +2260,12 @@ public class VirtualMachineMO extends BaseMO {
 
     public String getDiskCurrentTopBackingFileInChain(String deviceBusName) throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     logger.info("Test against disk device, controller key: " + device.getControllerKey() + ", unit number: " + device.getUnitNumber());
 
-                    VirtualDeviceBackingInfo backingInfo = ((VirtualDisk)device).getBacking();
+                    VirtualDeviceBackingInfo backingInfo = device.getBacking();
                     if (backingInfo instanceof VirtualDiskFlatVer2BackingInfo) {
                         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
 
@@ -2549,10 +2285,10 @@ public class VirtualMachineMO extends BaseMO {
 
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (CollectionUtils.isNotEmpty(devices)) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
-                    VirtualDeviceBackingInfo backingInfo = ((VirtualDisk)device).getBacking();
+                    VirtualDeviceBackingInfo backingInfo = device.getBacking();
                     if (backingInfo instanceof VirtualDiskFlatVer2BackingInfo) {
                         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
                         while (diskBackingInfo != null) {
@@ -2569,16 +2305,16 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public List<Pair<Integer, ManagedObjectReference>> getAllDiskDatastores() throws Exception {
-        List<Pair<Integer, ManagedObjectReference>> disks = new ArrayList<Pair<Integer, ManagedObjectReference>>();
+        List<Pair<Integer, ManagedObjectReference>> disks = new ArrayList<>();
 
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
-                    VirtualDeviceBackingInfo backingInfo = ((VirtualDisk)device).getBacking();
+                    VirtualDeviceBackingInfo backingInfo = device.getBacking();
                     if (backingInfo instanceof VirtualDiskFlatVer2BackingInfo) {
                         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
-                        disks.add(new Pair<Integer, ManagedObjectReference>(new Integer(device.getKey()), diskBackingInfo.getDatastore()));
+                        disks.add(new Pair<>(Integer.valueOf(device.getKey()), diskBackingInfo.getDatastore()));
                     }
                 }
             }
@@ -2595,11 +2331,11 @@ public class VirtualMachineMO extends BaseMO {
             throw new Exception("Unsupported VirtualDeviceBackingInfo");
         }
 
-        List<Pair<String, ManagedObjectReference>> pathList = new ArrayList<Pair<String, ManagedObjectReference>>();
+        List<Pair<String, ManagedObjectReference>> pathList = new ArrayList<>();
         VirtualDiskFlatVer2BackingInfo diskBackingInfo = (VirtualDiskFlatVer2BackingInfo)backingInfo;
 
         if (!followChain) {
-            pathList.add(new Pair<String, ManagedObjectReference>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
+            pathList.add(new Pair<>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
             return pathList;
         }
 
@@ -2610,11 +2346,11 @@ public class VirtualMachineMO extends BaseMO {
 
         do {
             if (diskBackingInfo.getParent() != null) {
-                pathList.add(new Pair<String, ManagedObjectReference>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
+                pathList.add(new Pair<>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
                 diskBackingInfo = diskBackingInfo.getParent();
             } else {
                 // try getting parent info from VMDK file itself
-                byte[] content = null;
+                byte[] content;
                 try {
                     String url = getContext().composeDatastoreBrowseUrl(dcPair.second(), diskBackingInfo.getFileName());
                     content = getContext().getResourceContent(url);
@@ -2622,7 +2358,7 @@ public class VirtualMachineMO extends BaseMO {
                         break;
                     }
 
-                    pathList.add(new Pair<String, ManagedObjectReference>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
+                    pathList.add(new Pair<>(diskBackingInfo.getFileName(), diskBackingInfo.getDatastore()));
                 } catch (Exception e) {
                     // if snapshot directory has been changed to place other than default. VMware has a bug
                     // that its corresponding disk backing info is not updated correctly. therefore, we will try search
@@ -2636,7 +2372,7 @@ public class VirtualMachineMO extends BaseMO {
                         break;
                     }
 
-                    pathList.add(new Pair<String, ManagedObjectReference>(vmdkFullDsPath, diskBackingInfo.getDatastore()));
+                    pathList.add(new Pair<>(vmdkFullDsPath, diskBackingInfo.getDatastore()));
                 }
 
                 VmdkFileDescriptor descriptor = new VmdkFileDescriptor();
@@ -2685,7 +2421,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public List<VirtualDisk> getVirtualDisks() throws Exception {
-        List<VirtualDisk> virtualDisks = new ArrayList<VirtualDisk>();
+        List<VirtualDisk> virtualDisks = new ArrayList<>();
 
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
@@ -2700,7 +2436,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public List<VirtualDisk> getVirtualDisksOrderedByKey() throws Exception {
         List<VirtualDisk> virtualDisks = getVirtualDisks();
-        Collections.sort(virtualDisks, new Comparator<VirtualDisk>() {
+        Collections.sort(virtualDisks, new Comparator<>() {
             @Override
             public int compare(VirtualDisk disk1, VirtualDisk disk2) {
                 Integer disk1Key = disk1.getKey();
@@ -2716,7 +2452,7 @@ public class VirtualMachineMO extends BaseMO {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
         VirtualMachineConfigSpec reConfigSpec = new VirtualMachineConfigSpec();
-        List<String> detachedDiskFiles = new ArrayList<String>();
+        List<String> detachedDiskFiles = new ArrayList<>();
 
         for (VirtualDevice device : devices) {
             if (device instanceof VirtualDisk) {
@@ -2727,9 +2463,7 @@ public class VirtualMachineMO extends BaseMO {
                 DatastoreFile dsBackingFile = new DatastoreFile(diskBackingInfo.getFileName());
                 String backingBaseName = dsBackingFile.getFileBaseName();
                 String deviceNumbering = getDeviceBusName(devices, device);
-                if (backingBaseName.equalsIgnoreCase(vmdkBaseName) || (deviceBusName != null && deviceBusName.equals(deviceNumbering))) {
-                    continue;
-                } else {
+                if (! (backingBaseName.equalsIgnoreCase(vmdkBaseName) || (deviceBusName != null && deviceBusName.equals(deviceNumbering)))) {
                     logger.info("Detach " + diskBackingInfo.getFileName() + " from " + getName());
 
                     detachedDiskFiles.add(diskBackingInfo.getFileName());
@@ -2742,7 +2476,7 @@ public class VirtualMachineMO extends BaseMO {
             }
         }
 
-        if (detachedDiskFiles.size() > 0) {
+        if (!detachedDiskFiles.isEmpty()) {
             ManagedObjectReference morTask = _context.getService().reconfigVMTask(_mor, reConfigSpec);
             boolean result = _context.getVimClient().waitForTask(morTask);
             if (result) {
@@ -2761,9 +2495,9 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualDisk[] getAllDiskDevice() throws Exception {
-        List<VirtualDisk> deviceList = new ArrayList<VirtualDisk>();
+        List<VirtualDisk> deviceList = new ArrayList<>();
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualDisk) {
                     deviceList.add((VirtualDisk)device);
@@ -2775,26 +2509,24 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualDisk[] getAllIndependentDiskDevice() throws Exception {
-        List<VirtualDisk> independentDisks = new ArrayList<VirtualDisk>();
+        List<VirtualDisk> independentDisks = new ArrayList<>();
         VirtualDisk[] allDisks = getAllDiskDevice();
-        if (allDisks.length > 0) {
-            for (VirtualDisk disk : allDisks) {
-                String diskMode = "";
-                if (disk.getBacking() instanceof VirtualDiskFlatVer1BackingInfo) {
-                    diskMode = ((VirtualDiskFlatVer1BackingInfo)disk.getBacking()).getDiskMode();
-                } else if (disk.getBacking() instanceof VirtualDiskFlatVer2BackingInfo) {
-                    diskMode = ((VirtualDiskFlatVer2BackingInfo)disk.getBacking()).getDiskMode();
-                } else if (disk.getBacking() instanceof VirtualDiskRawDiskMappingVer1BackingInfo) {
-                    diskMode = ((VirtualDiskRawDiskMappingVer1BackingInfo)disk.getBacking()).getDiskMode();
-                } else if (disk.getBacking() instanceof VirtualDiskSparseVer1BackingInfo) {
-                    diskMode = ((VirtualDiskSparseVer1BackingInfo)disk.getBacking()).getDiskMode();
-                } else if (disk.getBacking() instanceof VirtualDiskSparseVer2BackingInfo) {
-                    diskMode = ((VirtualDiskSparseVer2BackingInfo)disk.getBacking()).getDiskMode();
-                }
+        for (VirtualDisk disk : allDisks) {
+            String diskMode = "";
+            if (disk.getBacking() instanceof VirtualDiskFlatVer1BackingInfo) {
+                diskMode = ((VirtualDiskFlatVer1BackingInfo) disk.getBacking()).getDiskMode();
+            } else if (disk.getBacking() instanceof VirtualDiskFlatVer2BackingInfo) {
+                diskMode = ((VirtualDiskFlatVer2BackingInfo) disk.getBacking()).getDiskMode();
+            } else if (disk.getBacking() instanceof VirtualDiskRawDiskMappingVer1BackingInfo) {
+                diskMode = ((VirtualDiskRawDiskMappingVer1BackingInfo) disk.getBacking()).getDiskMode();
+            } else if (disk.getBacking() instanceof VirtualDiskSparseVer1BackingInfo) {
+                diskMode = ((VirtualDiskSparseVer1BackingInfo) disk.getBacking()).getDiskMode();
+            } else if (disk.getBacking() instanceof VirtualDiskSparseVer2BackingInfo) {
+                diskMode = ((VirtualDiskSparseVer2BackingInfo) disk.getBacking()).getDiskMode();
+            }
 
-                if (diskMode.indexOf("independent") != -1) {
-                    independentDisks.add(disk);
-                }
+            if (diskMode.contains("independent")) {
+                independentDisks.add(disk);
             }
         }
 
@@ -2804,10 +2536,10 @@ public class VirtualMachineMO extends BaseMO {
     public int tryGetIDEDeviceControllerKey() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualIDEController) {
-                    return ((VirtualIDEController)device).getKey();
+                    return device.getKey();
                 }
             }
         }
@@ -2818,10 +2550,10 @@ public class VirtualMachineMO extends BaseMO {
     public int getIDEDeviceControllerKey() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualIDEController) {
-                    return ((VirtualIDEController)device).getKey();
+                    return device.getKey();
                 }
             }
         }
@@ -2837,7 +2569,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public VirtualDevice getIsoDevice() throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualCdrom) {
                     return device;
@@ -2857,7 +2589,7 @@ public class VirtualMachineMO extends BaseMO {
 
     public VirtualDevice getIsoDevice(int key) throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualCdrom && device.getKey() == key) {
                     return device;
@@ -2868,9 +2600,9 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public VirtualDevice getIsoDevice(String filename) throws Exception {
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().
+        List<VirtualDevice> devices = _context.getVimClient().
                 getDynamicProperty(_mor, "config.hardware.device");
-        if(devices != null && devices.size() > 0) {
+        if(devices != null && !devices.isEmpty()) {
             long isoDevices = devices.stream()
                     .filter(x -> x instanceof VirtualCdrom && x.getBacking() instanceof VirtualCdromIsoBackingInfo)
                     .count();
@@ -2892,10 +2624,10 @@ public class VirtualMachineMO extends BaseMO {
     public int getNextDeviceNumber(int controllerKey) throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        List<Integer> existingUnitNumbers = new ArrayList<Integer>();
+        List<Integer> existingUnitNumbers = new ArrayList<>();
         int deviceNumber = 0;
         int scsiControllerKey = getScsiDeviceControllerKeyNoException();
-        if (devices != null && devices.size() > 0) {
+        if (devices != null && !devices.isEmpty()) {
             for (VirtualDevice device : devices) {
                 if (device.getControllerKey() != null && device.getControllerKey().intValue() == controllerKey) {
                     existingUnitNumbers.add(device.getUnitNumber());
@@ -2916,7 +2648,7 @@ public class VirtualMachineMO extends BaseMO {
     private List<VirtualDevice> getNicDevices(boolean sorted) throws Exception {
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
-        List<VirtualDevice> nics = new ArrayList<VirtualDevice>();
+        List<VirtualDevice> nics = new ArrayList<>();
         if (devices != null) {
             for (VirtualDevice device : devices) {
                 if (device instanceof VirtualEthernetCard) {
@@ -2926,7 +2658,7 @@ public class VirtualMachineMO extends BaseMO {
         }
 
         if (sorted) {
-            Collections.sort(nics, new Comparator<VirtualDevice>() {
+            Collections.sort(nics, new Comparator<>() {
                 @Override
                 public int compare(VirtualDevice arg0, VirtualDevice arg1) {
                     int unitNumber0 = arg0.getUnitNumber() != null ? arg0.getUnitNumber().intValue() : -1;
@@ -2968,19 +2700,19 @@ public class VirtualMachineMO extends BaseMO {
         String attachedNetworkSummary;
         String dvPortGroupName;
         for (VirtualDevice nic : nics) {
-            attachedNetworkSummary = ((VirtualEthernetCard)nic).getDeviceInfo().getSummary();
+            attachedNetworkSummary = nic.getDeviceInfo().getSummary();
             if (attachedNetworkSummary.startsWith(networkNamePrefix)) {
-                return new Pair<Integer, VirtualDevice>(new Integer(index), nic);
+                return new Pair<>(index, nic);
             } else if (attachedNetworkSummary.endsWith("DistributedVirtualPortBackingInfo.summary") || attachedNetworkSummary.startsWith("DVSwitch")) {
                 dvPortGroupName = getDvPortGroupName((VirtualEthernetCard)nic);
                 if (dvPortGroupName != null && dvPortGroupName.startsWith(networkNamePrefix)) {
                     logger.debug("Found a dvPortGroup already associated with public NIC.");
-                    return new Pair<Integer, VirtualDevice>(new Integer(index), nic);
+                    return new Pair<>(index, nic);
                 }
             }
             index++;
         }
-        return new Pair<Integer, VirtualDevice>(new Integer(-1), null);
+        return new Pair<>(Integer.valueOf(-1), null);
     }
 
     public String getDvPortGroupName(VirtualEthernetCard nic) throws Exception {
@@ -2990,13 +2722,13 @@ public class VirtualMachineMO extends BaseMO {
         ManagedObjectReference dvPortGroupMor = new ManagedObjectReference();
         dvPortGroupMor.setValue(dvPortGroupKey);
         dvPortGroupMor.setType("DistributedVirtualPortgroup");
-        return (String)_context.getVimClient().getDynamicProperty(dvPortGroupMor, "name");
+        return _context.getVimClient().getDynamicProperty(dvPortGroupMor, "name");
     }
 
     public VirtualDevice[] getMatchedDevices(Class<?>[] deviceClasses) throws Exception {
         assert (deviceClasses != null);
 
-        List<VirtualDevice> returnList = new ArrayList<VirtualDevice>();
+        List<VirtualDevice> returnList = new ArrayList<>();
 
         List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
 
@@ -3142,14 +2874,14 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public long getHotAddMemoryIncrementSizeInMb() throws Exception {
-        return (Long)_context.getVimClient().getDynamicProperty(_mor, "config.hotPlugMemoryIncrementSize");
+        return _context.getVimClient().getDynamicProperty(_mor, "config.hotPlugMemoryIncrementSize");
     }
 
     public long getHotAddMemoryLimitInMb() throws Exception {
-        return (Long)_context.getVimClient().getDynamicProperty(_mor, "config.hotPlugMemoryLimit");
+        return _context.getVimClient().getDynamicProperty(_mor, "config.hotPlugMemoryLimit");
     }
     public String getGuestId() throws Exception {
-        return (String)_context.getVimClient().getDynamicProperty(_mor, "config.guestId");
+        return _context.getVimClient().getDynamicProperty(_mor, "config.guestId");
     }
 
     public int getCoresPerSocket() throws Exception {
@@ -3158,7 +2890,7 @@ public class VirtualMachineMO extends BaseMO {
         if (apiVersion.compareTo("5.0") < 0) {
             return 1;
         }
-        Integer coresPerSocket = (Integer)_context.getVimClient().getDynamicProperty(_mor, "config.hardware.numCoresPerSocket");
+        Integer coresPerSocket = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.numCoresPerSocket");
         return coresPerSocket != null ? coresPerSocket : 1;
     }
 
@@ -3241,7 +2973,7 @@ public class VirtualMachineMO extends BaseMO {
     }
 
     public String getExternalDiskUUID(String datastoreVolumePath) throws Exception{
-        List<VirtualDevice> devices = (List<VirtualDevice>)_context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
+        List<VirtualDevice> devices = _context.getVimClient().getDynamicProperty(_mor, "config.hardware.device");
         if (CollectionUtils.isEmpty(devices) || datastoreVolumePath == null) {
             return null;
         }
@@ -3313,7 +3045,7 @@ public class VirtualMachineMO extends BaseMO {
 
         int vmTasks = 0, vmPendingTasks = 0;
         for (ManagedObjectReference task : tasks) {
-            TaskInfo info = (TaskInfo) (_context.getVimClient().getDynamicProperty(task, "info"));
+            TaskInfo info = _context.getVimClient().getDynamicProperty(task, "info");
             if (info.getEntityName().equals(vmName)) {
                 vmTasks++;
                 if (!(info.getState().equals(TaskInfoState.SUCCESS) || info.getState().equals(TaskInfoState.ERROR))) {
@@ -3350,7 +3082,7 @@ public class VirtualMachineMO extends BaseMO {
             if (content == null || content.length == 0) {
                 break;
             }
-            byte[] newVmdkContent = vmdkFileDescriptor.removeChangeTrackPath(content);
+            byte[] newVmdkContent = VmdkFileDescriptor.removeChangeTrackPath(content);
 
             Pair<DatacenterMO, String> dcPair = getOwnerDatacenter();
             String vmdkUrl = getContext().composeDatastoreBrowseUrl(dcPair.second(), diskBackingInfo.getFileName());
